# llmreport-data

./: .gitattributes  .gitignore  PHASE0-STATUS.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  collect.yml  robots-recheck.yml  sentinel.yml  verify.yml
collectors/: README.md
collectors/src/llmreport_collectors/: __init__.py  __main__.py  aliases.py  corroborate.py  diff.py  docs_extract.py  events.py  normalize.py  runner.py  store.py
collectors/tests/: collector_rig.py  test_corroborate.py  test_diff.py  test_normalize.py  test_phase1a_normalize.py  test_phase1a_runner.py  test_runner.py
collectors/tests/fixtures/: anthropic-changelog.a.html  anthropic-changelog.b.html  aws-bedrock-offers.a.json  aws-bedrock-offers.b.json  aws-health.a.json  aws-health.b.json  aws-health.c.json  azure-retail-prices.a.p1.json  azure-retail-prices.a.p2.json  azure-retail-prices.b.json  azure-status-feed.a.xml  azure-status-feed.b.xml  azure-status-feed.c.xml  azure-whats-new.a.html  azure-whats-new.b.html  google-gemini-changelog.a.html  google-gemini-changelog.b.html  litellm-prices.a.json  litellm-prices.b.json  mistral-docs-overview.a.html  mistral-models-index.a.ts  mistral-models-index.b.ts  mistral-status-payload.a.json  mistral-status-payload.b.json  mistral-status-payload.c.json  openai-changelog.a.html  openai-changelog.b.html  openrouter-models.a.json  openrouter-models.b.json  statuspage-anthropic-history.a.xml  statuspage-anthropic-history.empty.xml  statuspage-anthropic-history.open.xml  statuspage-anthropic-history.resolved.xml  statuspage-anthropic-incidents.a.json  statuspage-anthropic-summary.a.json  statuspage-openai-incidents.a.json  statuspage-openai-incidents.b.json  statuspage-openai-incidents.c.json  statuspage-openai-summary.a.json  statuspage-openai-summary.b.json  (+3 more)
compliance/: README.md
compliance/tou-sweep-2026-07/: 00-sweep-summary.md  anthropic.md  aws.md  google.md  microsoft.md  mistral.md  openai.md  policy-pages.md  xai.md
derived/: state.json
fixtures/annotations/invalid/: bad-kind.json
fixtures/annotations/valid/: corroboration.json  mirror-corroborated.json  rollback.json
fixtures/events/invalid/: capability.changed__bad-change-kind.json  correction.issued__bad-root-cause.json  degradation.detected__bad-signal.json  degradation.resolved__window-hours-string.json  limits.changed__bad-limit-kind.json  model.deprecated__bad-source-kind.json  model.released__empty-evidence.json  model.retired__missing-source-kind.json  model.updated__context-window-string.json  outage.resolved__missing-incident-id.json  outage.started__components-not-array.json  policy.changed__provider-openrouter.json  price.changed__bad-currency.json  (+1 more)
lib/fetchkit/: README.md  pyproject.toml
lib/fetchkit/src/fetchkit/: __init__.py  audit.py  cache.py  client.py  evidence.py  exceptions.py  redaction.py  registry.py  robots.py  transport.py
lib/fetchkit/tests/: conftest.py  test_allowlist.py  test_audit.py  test_conditional_get.py  test_etiquette.py  test_evidence.py  test_failure.py  test_pagination_and_size.py  test_redaction.py  test_registry_real.py
queue/: README.md
registry/: model-aliases.json  sources.json
registry/schema/: sources.schema.json
schemas/: annotation.v2.json  change-event.v2.json  identity-key.v2.json  publication.v2.json  verdict.v2.json
schemas/data/: capability.changed.v2.json  correction.issued.v2.json  degradation.detected.v2.json  degradation.resolved.v2.json  limits.changed.v2.json  model.deprecated.v2.json  model.released.v2.json  model.retired.v2.json  model.updated.v2.json  outage.resolved.v2.json  outage.started.v2.json  policy.changed.v2.json  price-structure.v2.json  price.changed.v2.json
schemas/snapshots/: docs-html.v2.json  models-api.v2.json  pricing-api.v2.json  statuspage.v2.json
tables/: materiality.json  severity.json
tools/guards/: pii_guard.py  redaction_gate.py
tools/verifier/: README.md
(+92 files in other folders)
